# doppelganger

./: readme.txt
cpp/: CMakeLists.txt  doppelgangerEnroll.cpp  doppelgangerRecognize.cpp  labelData.cpp  labelData.h
